--- a/AndroidActivity-P7/app/src/main/AndroidManifest.xml
+++ b/AndroidActivity-P7/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
             android:theme="@style/AppTheme"
             android:label="@string/about_title">
         </activity>
-
+        <activity android:name=".RegistrationActivity"
+            android:theme="@style/AppTheme"
+            android:label="@string/registration_title">
+        </activity>
     </application>
 
 </manifest>
